move example to example/rails4

--- a/example/rails4/Gemfile
+++ b/example/rails4/Gemfile
@@ -1,6 +1,6 @@
 source 'https://rubygems.org'
 
-gem 'activerecord-refresh_connection', path: '../'
+gem 'activerecord-refresh_connection', path: '../..'
 # Bundle edge Rails instead: gem 'rails', github: 'rails/rails'
 gem 'rails', '4.1.1'
 # Use sqlite3 as the database for Active Record
