--- a/example/example/Gemfile
+++ b/example/example/Gemfile
@@ -1,10 +1,11 @@
 source 'https://rubygems.org'
 
-
+gem 'activerecord-refresh_connection', path: '../..'
 # Bundle edge Rails instead: gem 'rails', github: 'rails/rails'
 gem 'rails', '~> 5.0.0'
 # Use sqlite3 as the database for Active Record
-gem 'sqlite3'
+# gem 'sqlite3'
+gem 'mysql2'
 # Use Puma as the app server
 gem 'puma', '~> 3.0'
 # Use SCSS for stylesheets
