rails 4.1.1 depends on mysql2 ~> 0.3.13

--- a/example/rails4/Gemfile
+++ b/example/rails4/Gemfile
@@ -5,7 +5,7 @@ gem 'activerecord-refresh_connection', path: '../..'
 gem 'rails', '4.1.1'
 # Use sqlite3 as the database for Active Record
 # gem 'sqlite3'
-gem 'mysql2'
+gem 'mysql2', '~> 0.3.13'
 # Use SCSS for stylesheets
 gem 'sass-rails', '~> 4.0.3'
 # Use Uglifier as compressor for JavaScript assets
