--- a/example/example/Gemfile
+++ b/example/example/Gemfile
@@ -7,7 +7,7 @@ gem 'rails', '~> 5.0.0'
 # gem 'sqlite3'
 gem 'mysql2'
 # Use Puma as the app server
-gem 'puma', '~> 3.0'
+# gem 'puma', '~> 3.0'
 # Use SCSS for stylesheets
 gem 'sass-rails', '~> 5.0'
 # Use Uglifier as compressor for JavaScript assets
