--- a/example/example/Gemfile
+++ b/example/example/Gemfile
@@ -8,6 +8,8 @@ gem 'rails', '~> 5.0.0'
 gem 'mysql2'
 # Use Puma as the app server
 # gem 'puma', '~> 3.0'
+gem 'unicorn'
+gem 'foreman'
 # Use SCSS for stylesheets
 gem 'sass-rails', '~> 5.0'
 # Use Uglifier as compressor for JavaScript assets
